<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerViewModel"
            type="com.example.myapplication.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/register_email_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_email_address_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="Enter Email address"
                    android:theme="@style/select_checkbox" />

                <ImageView
                    android:id="@+id/register_email_address_iv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_selected" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_choose_region_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Region"/>
            <EditText
                android:id="@+id/register_choose_region_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="Choose Region"
                android:theme="@style/select_checkbox" />

            <TextView
                android:id="@+id/register_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"/>
            <com.example.myapplication.customview.PasswordView
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="111"
                android:hint="8-20 Charactors"
                android:textColor="@color/cardview_shadow_start_color"
                android:theme="@style/select_checkbox"
                app:useStrikeThrough="true" />

            <TextView
                android:id="@+id/register_confirm_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password"/>
            <com.example.myapplication.customview.PasswordView
                android:id="@+id/register_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="111"
                android:hint="8-20 Charactors"
                android:theme="@style/select_checkbox"
                android:textColor="@color/cardview_shadow_start_color"
                app:useStrikeThrough="true" />

            <com.example.myapplication.customview.UnderlineTextView
                android:id="@+id/register_password_rules_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密码规则......"
                android:textColor="#3c78d8"
                app:underline_color="#3c78d8"
                app:underline_height="1dp"
                android:drawableLeft="@drawable/zxl_flashlight_selector"/>

            <TextView
                android:id="@+id/register_password_rules_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/register_password_rules_content" />

            <TextView
                android:id="@+id/register_verification_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Verification code" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/register_enter_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Code" />
                <com.example.myapplication.customview.CountdownButton
                    android:id="@+id/register_get_verification_code_btn"
                    android:layout_width="250dp"
                    android:layout_height="42dp"
                    android:enabled="false"
                    android:background="@drawable/selector_verification_code"
                    app:countdown_time="12"/>
            </LinearLayout>

            <TextView
                android:id="@+id/register_get_verification_code_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/register_get_verification_code_tip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/register_agree_privacy_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:button="@drawable/selector_checkbox"
                    android:theme="@style/select_checkbox" />
                <TextView
                    android:id="@+id/register_privacy_content_tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_signup_agreeTerms_1"
                    android:theme="@style/select_checkbox"/>
                <com.example.myapplication.customview.UnderlineTextView
                    android:id="@+id/register_privacy_content_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_signup_agreeTerms_2"
                    android:textColor="#3c78d8"
                    app:underline_color="#3c78d8"
                    app:underline_height="1dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_sign_up"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:enabled="@{registerViewModel.isSaveEnable}"
                android:gravity="center"
                android:background="@drawable/selector_sign_up"
                android:onClick="@{()->registerViewModel.saveDeviceInfo()}"
                android:text="Sign up"
                android:textColor="@{registerViewModel.isSaveEnable ? @color/textColorInColorView : @color/textColor}" />

        </LinearLayout>
    </ScrollView>

</layout>